[gd_scene load_steps=20 format=3 uid="uid://xv7l8o4pc75p"]

[ext_resource type="Script" path="res://BadGrass/Enemies/enemy2.gd" id="1_apbov"]
[ext_resource type="Texture2D" uid="uid://bj6vl3gjkih3t" path="res://BadGrass/Enemies/Sprites/satyr-Sheet.png" id="2_b6x1a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3hxk3"]
radius = 6.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mhokv"]
atlas = ExtResource("2_b6x1a")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbejp"]
atlas = ExtResource("2_b6x1a")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3dhv"]
atlas = ExtResource("2_b6x1a")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hww6a"]
atlas = ExtResource("2_b6x1a")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oept"]
atlas = ExtResource("2_b6x1a")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pax62"]
atlas = ExtResource("2_b6x1a")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5n6h"]
atlas = ExtResource("2_b6x1a")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_30hm0"]
atlas = ExtResource("2_b6x1a")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo2xi"]
atlas = ExtResource("2_b6x1a")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qtcf"]
atlas = ExtResource("2_b6x1a")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dc02"]
atlas = ExtResource("2_b6x1a")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nyw2"]
atlas = ExtResource("2_b6x1a")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dywt"]
atlas = ExtResource("2_b6x1a")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_05hcc"]
atlas = ExtResource("2_b6x1a")
region = Rect2(224, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5hpu4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhokv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbejp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3dhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hww6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oept")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pax62")
}],
"loop": true,
"name": &"Hit",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5n6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30hm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo2xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qtcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dc02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nyw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dywt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05hcc")
}],
"loop": true,
"name": &"Run",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_klpn6"]
size = Vector2(36, 21)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_apbov")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3hxk3")

[node name="Anim" type="AnimatedSprite2D" parent="."]
z_as_relative = false
sprite_frames = SubResource("SpriteFrames_5hpu4")
animation = &"Run"
frame_progress = 0.199513

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
polygon = PackedVector2Array(-16, 12, 16, 12, 16, 7, 3, -5, -4, -5, -16, 7)

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_klpn6")

[node name="HurtTime" type="Timer" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -7)

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_hurt_box_body_exited"]
[connection signal="timeout" from="HurtTime" to="." method="_on_hurt_time_timeout"]
